clustertest/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcatinfra-deploy
  labels:
    app: tomcatinfra
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcatinfra
  template:
    metadata:
      labels:
        app: tomcatinfra
    spec:
      containers:
      - name: tomcatinfra
        image: saravak/tomcat8
        ports:
          - containerPort: 8080
