clustertest/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcatappsvc
  labels:
    app: tomcatinfra
  annotations:    
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: tomcatinfra
  type: NodePort
